manifests/deployments/make-line-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: make-line-service
  namespace: reddog
  labels:
    app: make-line-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: make-line-service
  template:
    metadata:
      labels:
        app: make-line-service
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "make-line-service"
        dapr.io/app-port: "80"
        dapr.io/config: "reddog.config"
    spec:
      containers:
        - name: make-line-service
          image: "ghcr.io/azure/reddog-retail-demo/reddog-retail-make-line-service:latest"
          ports:
            - containerPort: 80
          imagePullPolicy: Always
          startupProbe:
            httpGet:
              path: /probes/healthz
              port: 80
            failureThreshold: 6
            periodSeconds: 10
