manifests/deployments/services-external.yaml
apiVersion: v1
kind: Service
metadata:
  name: make-line-service
  namespace: reddog
  labels:
    name: make-line-service
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 8082
    targetPort: 80
  selector:
    app: make-line-service
---
apiVersion: v1
kind: Service
metadata:
  name: accounting-service
  namespace: reddog
  labels:
    name: accounting-service
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 8083
    targetPort: 80
  selector:
    app: accounting-service  
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: reddog
  labels:
    name: order-service
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 8081
    targetPort: 80
  selector:
    app: order-service
